Fri Feb 29 01:37:08 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/LinkState/DiagnosticManager.cpp:
        * tests/DCPS/LinkState/TestRouter.cpp:
	  Simplify the output formatting a bit.

Fri Feb 29 00:14:41 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Definitions.h:
          Updating the weak strict ordering operations.  Again.

        * dds/InfoRepo/LinkStateManager.cpp:
          Added diagnostic messages.

        * tests/DCPS/LinkState:
        * tests/DCPS/LinkState/DiagnosticManager.h:
        * tests/DCPS/LinkState/DiagnosticManager.cpp:
        * tests/DCPS/LinkState/LinkState.mpc:
        * tests/DCPS/LinkState/README:
        * tests/DCPS/LinkState/TestConfig.h:
        * tests/DCPS/LinkState/TestConfig.cpp:
        * tests/DCPS/LinkState/TestException.h:
        * tests/DCPS/LinkState/TestRouter.h:
        * tests/DCPS/LinkState/TestRouter.cpp:
        * tests/DCPS/LinkState/router.cpp:
        * tests/DCPS/LinkState/run_test.pl:
        * bin/dcps_tests.lst:
          Added rudimentary LinkStateManager unit test.

Thu Feb 28 19:56:58 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/LinkStateManager.h:
        * dds/InfoRepo/LinkStateManager.cpp:
          Initial implementation of Prim's algorithm.  The
          LinkStateManager is now complete.

Wed Feb 27 22:26:19 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Definitions.h:
          Made the ordering operations correct with respect to the
          lollipop "candy" portion.  N.B. The ordering will fail if the
          distance reaches or exceeds 1/2 of the "candy" size.

        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManager.h:
        * dds/InfoRepo/FederatorManager.cpp:
          Added additional parameters to the join_federation() method.

        * dds/InfoRepo/LinkStateManager.h:
        * dds/InfoRepo/LinkStateManager.cpp: